# fl-data-profiler

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-11-feature-scoring-modules.md
fldataprofier/: __init__.py  cli.py  registry.py  utils.py
fldataprofier/modules/: __init__.py  autogluon_module.py  base.py  boruta.py  eda.py  feature_interactions.py  flaml_module.py  information_coefficient.py  kmean.py  kmeans_gpu.py  lightgbm.py  mrmr.py  mutual_information.py  permutation_importance_ts.py  progress.py  pycaret_module.py  regime_scoring.py  regularized_linear.py  scipy.py  shap.py  sklearn.py  stability_selection.py  statistics.py  statsmodels.py  time_series_scoring.py  timeseries_importance.py  visual_regions.py  xgboost.py
scripts/: prepare_datasets.sh
tests/: test_automl.py  test_eda.py  test_feature_scoring_modules.py  test_html_reports.py  test_input_formats.py  test_kmean.py  test_kmeans_gpu.py  test_time_series_scoring.py  test_visual_regions.py  test_xgboost.py
