[project]
name = "fl-data-profiling"
version = "0.1.0"
description = "Feature/label relationship profiling reports"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.0",
    "shap>=0.48.0",
    "statsmodels>=0.14.6",
    "xgboost>=3.0.0",
]

[project.scripts]
fldataprofier = "fldataprofier.cli:main"
fldataprofiler = "fldataprofier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fldataprofier"]
