[project]
name = "fl-data-profiling"
version = "0.1.0"
description = "Feature/label relationship profiling reports"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "autofcholv",
    "flaml>=2.6.0",
    "labelohlcv",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.0,<3.0.0",
    "pyarrow>=18.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.0",
    "shap>=0.48.0",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.0",
    "xgboost>=3.0.0",
]

[project.scripts]
fldataprofiler = "fldataprofier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fldataprofier"]

[tool.uv.sources]
autofcholv = { git = "https://github.com/tempusoneps/autofcholv.git", branch = "develop" }
labelohlcv = { git = "https://github.com/tempusoneps/labelohlcv.git", branch = "develop" }
